# Meta_hack

./: .gitignore  Dockerfile  README.md  app.py  create_hf_space.py  inference.py  memory.json  openenv.yaml  pyproject.toml  requirements.txt  run_llm_agent.py
app/: main.py
baseline/: rule_based_agent.py
config/: env_config.py  task_configs.py
env/: __init__.py  observation.py  reward.py  schemas.py  simulator.py  traffic_env.py
graders/: __init__.py  base_grader.py  calibration.py  easy_grader.py  hard_grader.py  medium_grader.py
llm_agent/: __init__.py  agent.py  llm_adapter.py  memory.py  prompt_builder.py  trainer.py
models/: __init__.py  vehicle.py
scripts/: validate-submission.sh  validate_upgrade.py
server/: app.py
tasks/: task_easy.py  task_hard.py  task_medium.py
utils/: image_utils.py  replay.py  weather.py
